tests/src/errors/methodDestructure/arr.spec.4.ts
{
	const arr = [1, 2, 3, 4];
	const i: "isEmpty" = "isEmpty";
	const { [i]: d } = arr;
}
export {};
